--- a/pack.yaml
+++ b/pack.yaml
@@ -1,12 +1,12 @@
 ---
 ref: influxdb
 name: influxdb
-description: StackStorm integration pack for InfluxDB
+description: InfluxDB TSDB
 keywords: 
     - influxdb
     - influx
     - database
     - timeseries
-version: 0.1.0
+version: 0.1.1
 author: Encore Technologies
 email: code@encore.tech
